--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "rxjs": "5.0.1",
     "systemjs": "0.19.39",
     "zone.js": "^0.8.4",
-    "pouchdb": "^6.2.0"
+    "pouchdb": "^6.2.0",
+    "geolib": "^2.0.22"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0",
