--- a/platforms/ios/V1 GPS Lockout/V1 GPS Lockout-Info.plist
+++ b/platforms/ios/V1 GPS Lockout/V1 GPS Lockout-Info.plist
@@ -6,6 +6,17 @@
     <string>English</string>
     <key>CFBundleDisplayName</key>
     <string>${PRODUCT_NAME}</string>
+    <key>CFBundleDocumentTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleTypeName</key>
+        <string>MKDirectionsRequest</string>
+        <key>LSItemContentTypes</key>
+        <array>
+          <string>com.apple.maps.directionsrequest</string>
+        </array>
+      </dict>
+    </array>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIcons</key>
@@ -28,10 +39,30 @@
     <string>1.0.0</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
+    <key>MKDirectionsApplicationSupportedModes</key>
+    <array>
+      <string>MKDirectionsModeCar</string>
+    </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+      <key>NSAllowsArbitraryLoads</key>
+      <true/>
+    </dict>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string/>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Location Service requires background location tracking</string>
     <key>NSMainNibFile</key>
     <string/>
     <key>NSMainNibFile~ipad</key>
     <string/>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>bluetooth-central</string>
+      <string>location</string>
+    </array>
+    <key>UIRequiresFullScreen</key>
+    <true/>
     <key>UISupportedInterfaceOrientations</key>
     <array>
       <string>UIInterfaceOrientationPortrait</string>
@@ -44,21 +75,6 @@
       <string>UIInterfaceOrientationLandscapeLeft</string>
       <string>UIInterfaceOrientationPortraitUpsideDown</string>
       <string>UIInterfaceOrientationLandscapeRight</string>
-    </array>
-    <key>UIRequiresFullScreen</key>
-    <true/>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-      <key>NSAllowsArbitraryLoads</key>
-      <true/>
-    </dict>
-    <key>NSBluetoothPeripheralUsageDescription</key>
-    <string/>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Location Service requires background location tracking</string>
-    <key>UIBackgroundModes</key>
-    <array>
-      <string>location</string>
     </array>
   </dict>
 </plist>
